src/test/deca/context/invalid/pierre/sum_affect.deca
{
    int a = 1 + 1 ;
    float b = a + 2 ;
    b = 0.5 + b ;
    a = b + 1 ;
}